# AsmEmulator

./: CMakeLists.txt  README.md
AsmEmulator/: defines.h  instruction_set.cpp  instruction_set.h  instruction_types.h  main.cpp  reader.cpp  reader.h  translator.cpp  translator.h
AsmEmulator/tests/: add_two_numbers.asm  branch_test.asm  define_call_test.asm  jump_test.asm  recursion_test.asm  screen_test.asm
AsmEmulator/tests/IO/: echo.asm  gcd.asm
AsmEmulator/tests/input/: echo.asm
AsmEmulator/tests/output/: fib_screen.asm  gcd.asm  screen_overflow.asm  screen_test.asm  screen_test_2.asm
AsmEmulator/vm/: cpu.cpp  cpu.h  memory.cpp  memory.h  screen.cpp  screen.h  vm.cpp  vm.h
